add single impage pull secret in global

--- a/charts/vaas/templates/gdscan/secrets.yaml
+++ b/charts/vaas/templates/gdscan/secrets.yaml
@@ -14,7 +14,7 @@ type: kubernetes.io/dockerconfigjson
 apiVersion: v1
 kind: Secret
 metadata:
-  name: {{ include "gdscan.fullname" . }}-global-image-pull-secret
+  name: {{ include "gdscan.fullname" . }}-global-secret-image-pull-secret
   namespace: {{ .Release.Namespace }}
 data:
   .dockerconfigjson: {{ .Values.global.secret.imagePullSecret }}
@@ -29,5 +29,16 @@ metadata:
   namespace: {{ .Release.Namespace }}
 data:
   .dockerconfigjson: {{ .Values.global.secret.dockerconfigjson }}
+type: kubernetes.io/dockerconfigjson
+{{- end }}
+{{- if (.Values.global).imagePullSecret }}
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: {{ include "gdscan.fullname" . }}-global-image-pull-secret
+  namespace: {{ .Release.Namespace }}
+data:
+  .dockerconfigjson: {{ .Values.global.imagePullSecret }}
 type: kubernetes.io/dockerconfigjson
 {{- end }}
