--- a/charts/vaas/Chart.yaml
+++ b/charts/vaas/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: vaas
-version: 2.9.2
+version: 3.0.0
 description: Deployment of a Verdict-as-a-Service on-premise instance
 maintainers:
   - name: G DATA CyberDefense AG
@@ -8,9 +8,9 @@ maintainers:
 type: application
 dependencies:
   - name: redis
-    version: 21.2.4
+    version: 0.2.1
     condition: redis.enabled
-    repository: oci://registry-1.docker.io/bitnamicharts
+    repository: oci://registry-1.docker.io/cloudpirates
   - name: mini-identity-provider
     version: 0.7.0
     condition: mini-identity-provider.enabled
