--- a/charts/vaas/templates/gateway/statefulset.yaml
+++ b/charts/vaas/templates/gateway/statefulset.yaml
@@ -57,7 +57,7 @@ spec:
             - name: GDScanConfiguration__Url
               value: "http://gdscan:8080/scan/body"
             - name: RedisConfiguration__Configuration
-              value: "redis-master"
+              value: "redis"
             - name: DOTNET_ENVIRONMENT
               value: {{ .Release.Name }}
             - name: ASPNETCORE_ENVIRONMENT
