--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -307,37 +307,53 @@ gdscan:
         memory: 64Mi
 
 redis:
-  image:
-    repository: bitnamilegacy/redis
   enabled: true
-  architecture: standalone
   fullnameOverride: redis
   auth:
     enabled: false
-  master:
-    disableCommands: []
-    resources:
-      limits:
-        memory: 128Mi
-      requests:
-        cpu: 100m
-        memory: 64Mi
-    persistence:
-      enabled: false
-    podSecurityContext:
-      enabled: true
-      fsGroupChangePolicy: "OnRootMismatch"
-      fsGroup: 1001
-    containerSecurityContext:
-      enabled: true
-      readOnlyRootFilesystem: true
-      allowPrivilegeEscalation: false
-      runAsNonRoot: true
-      capabilities:
-        drop: ["ALL"]
-      seccompProfile:
-        type: RuntimeDefault
-      runAsUser: 1001
-      runAsGroup: 1001
-  networkPolicy:
+  resources:
+    limits:
+      memory: 128Mi
+    requests:
+      cpu: 100m
+      memory: 64Mi
+  persistence:
+    enabled: false
+  podSecurityContext:
     enabled: true
+    fsGroupChangePolicy: "OnRootMismatch"
+    fsGroup: 1001
+  containerSecurityContext:
+    enabled: true
+    readOnlyRootFilesystem: true
+    allowPrivilegeEscalation: false
+    runAsNonRoot: true
+    capabilities:
+      drop: ["ALL"]
+    seccompProfile:
+      type: RuntimeDefault
+    runAsUser: 1001
+    runAsGroup: 1001
+  extraObjects:
+    - apiVersion: networking.k8s.io/v1
+      kind: NetworkPolicy
+      metadata:
+        name: allow-dns
+        namespace: "{{ .Release.Namespace }}"
+      spec:
+        podSelector: {}
+        policyTypes:
+          - Egress
+        egress:
+          - to:
+              - namespaceSelector:
+                  matchLabels:
+                    kubernetes.io/metadata.name: kube-system
+                podSelector:
+                  matchLabels:
+                    k8s-app: kube-dns
+          - ports:
+              - port: 53
+                protocol: UDP
+              - port: 53
+                protocol: TCP
