--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -338,22 +338,19 @@ redis:
     - apiVersion: networking.k8s.io/v1
       kind: NetworkPolicy
       metadata:
-        name: allow-dns
+        name: redis
         namespace: "{{ .Release.Namespace }}"
       spec:
-        podSelector: {}
-        policyTypes:
-          - Egress
-        egress:
-          - to:
-              - namespaceSelector:
-                  matchLabels:
-                    kubernetes.io/metadata.name: kube-system
-                podSelector:
-                  matchLabels:
-                    k8s-app: kube-dns
+        podSelector:
+          matchLabels:
+            app.kubernetes.io/instance: "{{ .Release.Namespace }}"
+            app.kubernetes.io/name: redis
+        ingress:
           - ports:
-              - port: 53
-                protocol: UDP
-              - port: 53
-                protocol: TCP
+              - protocol: TCP
+                port: 6379
+        egress:
+          - {}
+        policyTypes:
+          - Ingress
+          - Egress
