set value for imagepull testing

--- a/charts/vaas/templates/imagepullsecrets-test.yaml
+++ b/charts/vaas/templates/imagepullsecrets-test.yaml
@@ -1,9 +1,11 @@
-{{- if .Values._tests.enableImagePullSecretsTest }}
+{{- $tests := .Values._tests | default dict -}}
+{{- if (get $tests "enableImagePullSecretsTest") }}
 apiVersion: v1
 kind: Pod
 metadata:
   name: imagepullsecrets-test
 spec:
+  {{- $_ := include "gateway.imagePullSecrets" . -}}
   {{- include "gateway.imagePullSecrets" . | nindent 2 }}
   containers:
     - name: noop
