--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -309,6 +309,8 @@ gdscan:
 redis:
   enabled: true
   fullnameOverride: redis
+  networkPolicy:
+    enabled: true
   auth:
     enabled: false
   resources:
@@ -332,20 +334,3 @@ redis:
       type: RuntimeDefault
     runAsUser: 1001
     runAsGroup: 1001
-  extraObjects:
-    - apiVersion: networking.k8s.io/v1
-      kind: NetworkPolicy
-      metadata:
-        name: redis
-        namespace: "{{ .Release.Namespace }}"
-      spec:
-        podSelector:
-          matchLabels:
-            app.kubernetes.io/instance: "{{ .Release.Namespace }}"
-            app.kubernetes.io/name: redis
-        ingress:
-          - ports:
-              - protocol: TCP
-                port: 6379
-        policyTypes:
-          - Ingress
