--- a/charts/vaas/templates/gdscan/ingress.yaml
+++ b/charts/vaas/templates/gdscan/ingress.yaml
@@ -1,3 +1,8 @@
+#######################################################################
+###           DEPRECATED: Will be replaced by Gateway API           ###
+### https://kubernetes.io/blog/2025/11/11/ingress-nginx-retirement/ ###
+#######################################################################
+
 {{- if .Values.gdscan.ingress.enabled -}}
 {{- $fullName := include "gdscan.fullname" . -}}
 {{- $svcPort := .Values.gdscan.service.port -}}
