--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -80,10 +80,43 @@ cloud:
 #   enableTracing: ""
 #   tracesSampleRate: ""
 
+gatewayApi:
+  enabled: false
+  nameOverride: ""
+  fullnameOverride: "gateway-api"
+  gatewayClassName: "eg"
+  annotations: {}
+  infrastructure:
+    annotations: {}
+  listeners:
+    https:
+      hostname: ""
+      protocol: HTTPS
+      port: 443
+      tlsSecretName: "gateway-api-tls"
+      allowedRoutes:
+        kinds:
+          - kind: HTTPRoute
+        namespaces:
+          from: Same
+    http:
+      hostname: ""
+      protocol: HTTP
+      port: 80
+      allowedRoutes:
+        kinds:
+          - kind: HTTPRoute
+        namespaces:
+          from: Same
+
 gateway:
   uploadToken:
     existingSecret: ""
     key: ""
+  httpRoute:
+    enabled: false
+    hostname: ""
+  # Deprecated: Use gatewayApi and httpRoute instead
   ingress:
     enabled: true
     className: ""
@@ -174,6 +207,7 @@ gateway:
   terminationGracePeriodSeconds: 30
 
   podAnnotations: {}
+  podLabels: {}
   nodeSelector: {}
   tolerations: []
   affinity: {}
