Use quotes for Gateway hostname

--- a/charts/vaas/templates/gateway-api/gateway.yaml
+++ b/charts/vaas/templates/gateway-api/gateway.yaml
@@ -24,7 +24,7 @@ spec:
       port: {{ $values.port }}
       protocol: {{ $values.protocol }}
       {{- if $values.hostname }}
-      hostname: {{ $values.hostname }}
+      hostname: {{ $values.hostname | quote }}
       {{- end }}
       {{- if $values.tlsSecretName }}
       tls:
