--- a/charts/vaas/templates/gateway-api/gateway.yaml
+++ b/charts/vaas/templates/gateway-api/gateway.yaml
@@ -3,7 +3,7 @@
 apiVersion: gateway.networking.k8s.io/v1
 kind: Gateway
 metadata:
-  name: {{ default (include "gateway-api.fullname" .) .Values.gatewayApi.nameOverride }}
+  name: {{ include "gateway-api.fullname" . }}
   namespace: {{ .Release.Namespace }}
   labels:
     {{ include "gateway-api.labels" . | nindent 4 }}
