--- a/charts/vaas/templates/gateway-api/http-redirect-route.yaml
+++ b/charts/vaas/templates/gateway-api/http-redirect-route.yaml
@@ -3,7 +3,7 @@
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: {{ default (include "gateway-api.fullname" .) .Values.gatewayApi.nameOverride }}
+  name: {{ include "gateway-api.fullname" . }}-redirect-route
   namespace: {{ .Release.Namespace }}
 spec:
   parentRefs:
