--- a/charts/vaas/templates/gateway/http-route.yaml
+++ b/charts/vaas/templates/gateway/http-route.yaml
@@ -3,7 +3,7 @@
 apiVersion: gateway.networking.k8s.io/v1beta1
 kind: HTTPRoute
 metadata:
-  name: {{ include "gateway.fullname" . }}
+  name: {{ include "gateway-api.fullname" . }}-gateway-route
   namespace: {{ .Release.Namespace }}
 spec:
   parentRefs:
@@ -19,11 +19,12 @@ spec:
         - name: {{ include "gateway.fullname" . }}
           port: {{ .Values.gateway.service.ws.port }}
           weight: 1
-      header:
-        - name: Upgrade
-          value: websocket
       matches:
-        - path:
+        - headers:
+            - name: Upgrade
+              value:
+                websocket
+          path:
             type: PathPrefix
             value: /
     - backendRefs:
