--- a/charts/vaas/templates/gateway-api/http-redirect-route.yaml
+++ b/charts/vaas/templates/gateway-api/http-redirect-route.yaml
@@ -7,7 +7,7 @@ metadata:
   namespace: {{ .Release.Namespace }}
 spec:
   parentRefs:
-    - name: {{ default (include "gateway-api.fullname" .) .Values.gatewayApi.nameOverride }}
+    - name: {{ include "gateway-api.fullname" . }}
       sectionName: http
   rules:
     - filters:
