add metrics port to service

--- a/charts/vaas/templates/gateway/networkpolicy.yaml
+++ b/charts/vaas/templates/gateway/networkpolicy.yaml
@@ -16,6 +16,7 @@ spec:
     - from:
       ports:
         - port: 8080 # Upload
+        - port: 8081 # Metrics
         - port: 9090 # Websocket
   egress:
     - to:
