--- a/charts/vaas/templates/gateway/service.yaml
+++ b/charts/vaas/templates/gateway/service.yaml
@@ -15,5 +15,9 @@ spec:
       targetPort: ws
       protocol: TCP
       name: ws
+    - port: {{ .Values.gateway.service.metrics.port }}
+      targetPort: metrics
+      protocol: TCP
+      name: metrics
   selector:
     {{- include "gateway.selectorLabels" . | nindent 4 }}
