--- a/charts/vaas/values.yaml
+++ b/charts/vaas/values.yaml
@@ -155,12 +155,14 @@ gateway:
     type: ClusterIP
     http:
       port: 8080
+    metrics:
+      port: 8081
     ws:
       port: 9090
 
   metrics:
     enabled: false
-    targetPort: 9110
+    targetPort: 8081
     livenessProbe:
       enabled: true
       httpGet:
