--- a/charts/vaas/templates/gateway/http-route.yaml
+++ b/charts/vaas/templates/gateway/http-route.yaml
@@ -45,4 +45,8 @@ spec:
         - path:
             type: PathPrefix
             value: /upload
+      timeouts:
+        # Includes the entire request+response roundtrip
+        request: 0s
+        backendRequest: 30s
 {{- end }}
