--- a/charts/vaas/templates/gdscan/update.yaml
+++ b/charts/vaas/templates/gdscan/update.yaml
@@ -66,7 +66,8 @@ spec:
           {{- include "gdscan.imagePullSecrets" . | nindent 10 }}
           volumes:
             - name: docker
-              emptyDir: {}
+              emptyDir:
+                sizeLimit: 1Gi
             {{- range (include "gdscan.imagePullSecrets" . | fromYaml ).imagePullSecrets }}
             - name: {{ .name }}
               secret:
